--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Race Car</title>
+    <style>
+      #canvas {border: 1px solid red;}
+    </style>
   </head>
   <body>
     <div class="game-intro">
